# herePark

./: .pre-commit-config.yaml  README.md  docker-compose.yml  run_app.sh
herepark-backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
herepark-backend/alembic/: env.py
herepark-backend/alembic/versions/: 0521ffca521f_added_parking_tables.py  866e1526ad45_added_parking_tables2.py  f11bcd77d6c2_added_user_table.py
herepark-backend/app/: dependencies.py  main.py
herepark-backend/app/core/: config.py  lifespan.py
herepark-backend/app/db/: base.py
herepark-backend/app/db/models/: parking.py  users.py
herepark-backend/app/interfaces/: parking.py  users.py
herepark-backend/app/routers/: __init__.py  parking.py  security.py
herepark-backend/app/schemas/: parking.py  users.py
herepark-backend/app/services/: parking.py  users.py
herepark-backend/app/utils/: security.py
herepark-backend/scripts/: init_spaces.py  run_development_server.sh
herepark-frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
herepark-frontend/src/: App.vue  main.ts  routes.ts
herepark-frontend/src/components/: ErrorMessage.vue  Home.vue  Login.vue  Navbar.vue  Parking.vue  Register.vue
herepark-frontend/src/schemas/: auth.ts  parking.ts
herepark-frontend/src/utils/: auth.ts  parking.ts
